# HumanNatureAttunement

./: .gitignore  PIPELINE_EXPLANATION.md  README.md  REPORT.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: subjects.json
notebooks/: Images_FD.ipynb  Respiration_audio_sync.ipynb  Respiration_cleaning_allsubjects.ipynb  cleaning_data.ipynb  download_pexel_videos.ipynb  old_sea_wave_audio.ipynb  preprocessing.ipynb  respiration_audio_sync_mar.ipynb  sea_wave_audio.ipynb  temporal_oscillations.ipynb
notebooks/legacy/: cleaning_data.ipynb  old_Merge_audio_physio.ipynb
remotion/: .gitignore  STORYBOARD.md  package.json  tsconfig.json
remotion/src/: Root.tsx  Showcase.tsx
report/: main.tex  main_v3.tex  wave_synthesis.tex
reports/methods/: methods.tex
reports/preliminary_results/: report.tex
reports/video_v3/: video_v3.tex
results/audio_eeg_correlation/: audio_eeg_correlation_results.csv
results/audio_eeg_correlation_band_matched/: audio_eeg_correlation_results.csv
results/coupling_comparison/: coupling_summary_all.csv  statistical_results.json
results/cross_modal/: cross_modal_long.csv
results/eeg_audio_phase_coupling/: eeg_audio_phase_coupling.csv  eeg_audio_phase_coupling_stats.csv
results/hrv_audio_coupling_comparison/: statistical_summary.csv
results/multi_envelope/: resp_audio_multi_envelope.csv
results/multi_envelope_hrv/: hrv_audio_multi_envelope.csv
results/nature_vs_rest/: nature_vs_rest_stats.csv
results/phase_polar/: phase_per_subject.csv
results/resting_state_features/: statistical_results_RS1_vs_RS2.csv
results/surrogate_hrv_audio/: surrogate_hrv_audio.csv
results/surrogate_resp_audio/: surrogate_resp_audio.csv
results/surrogate_tests/: resp_audio_plv_surrogates.csv
scripts/: Merge_audio_to_tables.py  align_data.py  check_gee_data.py  compare_coupling_conditions.py  compare_hrv_audio_coupling.py  compute_audio_eeg_coherence.py  compute_audio_eeg_correlation.py  compute_audio_eeg_mutual_information.py  conditions.json  cut_audio_by_conditions.py  extract_eeg_features.py  extract_hrv_features.py  make_audio_envelopes.py  make_framework_figure.py  make_v3_figures.py  plot_correlation_changes.py  plot_feature_distributions.py  plot_mi_changes.py  plot_resting_state_features.py  plot_resting_state_topomaps.py  preprocess_ecg.py  quantify_video.py  render_animation_assets.py  report_figures.py  run_coherence_stats.py  run_correlation_stats.py  run_correlation_stats_aggregated.py  run_gee_classification.py  run_glm_analysis.py  run_hrv_audio_coupling.py  run_mi_stats.py  run_mi_stats_aggregated.py  run_resp_audio_coupling.py  synthesise_ocean.py  wave_synthesis_figures.py
scripts/analysis/: _check_feature_correlations.py  _check_gee_data.py  _diagnose_entropy_effects.py  _verify_hrv_alignment.py  check_feature_correlations.py  check_gee_data.py  compute_audio_eeg_coherence.py  compute_audio_eeg_correlation.py  compute_audio_eeg_correlation_band_matched.py  compute_audio_eeg_mutual_information.py  compute_eeg_audio_coherence.py  compute_eeg_audio_correlation.py  compute_eeg_audio_correlation_band_matched.py  compute_eeg_audio_mutual_information.py  compute_eeg_audio_phase_coupling.py  compute_hrv_audio_coupling.py  compute_hrv_audio_multi_envelope.py  compute_resp_audio_coupling.py  compute_resp_audio_multi_envelope.py  diagnose_entropy_effects.py  run_hrv_audio_coupling.py  run_hrv_audio_multi_envelope.py  run_resp_audio_coupling.py  run_resp_audio_multi_envelope.py
scripts/features/: extract_eeg_features.py  extract_hrv_features.py
scripts/figures/: analysis_A_spectrum_overlay.py  analysis_B_surrogate_significance.py  analysis_C_time_resolved_coupling.py  analysis_D_cross_modal_coupling.py  analysis_E_phase_polar.py  analysis_F_HRV_multi_envelope_heatmap.py  analysis_F_multi_envelope_heatmap.py  analysis_HRV_Fig5_metrics_grid.py  analysis_RS1_vs_RS2_grid.py  analysis_features_grid.py  analysis_nature_vs_rest.py  (+17 more)
(+144 files in other folders)
