[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HumanNatureAttunement"
version = "0.1.0"
description = "Analysis and synchronization utilities for EEG, physio, and audio data."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Mar Estarellas and Antoine Bellemare" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "soundfile>=0.12",
]

[project.optional-dependencies]
# Information-theoretic estimators that wrap external toolboxes.
# `phyid` is on GitHub only and must be installed via `pip install
# git+https://github.com/Imperial-MIND-lab/integrated-info-decomp`.
info = [
  "pyinform>=0.2",   # Schreiber transfer entropy (binned)
  "dit>=1.5",        # Williams-Beer / BROJA partial information decomposition
]

[tool.setuptools.packages.find]
where = ["src"]
