[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HumanNatureAttunement"
version = "0.1.0"
description = "Analysis and synchronization utilities for EEG, physio, and audio data."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Mar Estarellas and Antoine Bellemare" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "scipy>=1.10",        # used across coupling/, dsp.py, modalities/, features/
  "soundfile>=0.12",
  "antropy>=0.1.4",     # permutation / sample / spectral entropy, fractal dims
                        # (features/entropy, features/fractal, coupling/complexity,
                        #  modalities/video)
  "neurokit2>=0.2",     # DFA, Hurst, Lempel-Ziv, multiscale entropy, ECG/HRV
                        # cleaning (modalities/ecg, modalities/video)
]

[project.optional-dependencies]
# Information-theoretic estimators that wrap external toolboxes.
# `phyid` is on GitHub only and must be installed via `pip install
# git+https://github.com/Imperial-MIND-lab/integrated-info-decomp`.
info = [
  "pyinform>=0.2",   # Schreiber transfer entropy (binned)
  "dit>=1.5",        # Williams-Beer / BROJA partial information decomposition
]
# Video modality (HNA.modalities.video). opencv-python is required to
# decode video; pydmd is optional (the modal extractor falls back to a
# POD/SVD baseline if missing).
video = [
  "opencv-python>=4.6",
  "pydmd>=0.4",         # Dynamic Mode Decomposition (modal extractor)
]

[tool.setuptools.packages.find]
where = ["src"]
